# video-ascii

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md
include/: AsciiRenderer.hpp
src/: AsciiRenderer.cpp  main.cpp
